[project]
name = "BERT_Finetuning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhangli", email = "s-zhangli@nowcoder.com"},
]
dependencies = ["transformers==4.43.0", "scikit-learn>=1.7.2", "pandas>=2.3.3", "numpy>=2.2.6", "tqdm>=4.67.1", "openpyxl>=3.1.5"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
